basic host provisioning
